--- a/src/404.html
+++ b/src/404.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/404.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -26,7 +26,7 @@
 		<p class="tip">抱歉！您访问的页面<span class="wr">失联</span>啦！</p>
 		<div class="site-list">
 			你可以访问:
-			<span><a href="./index.html">永高首页</a></span>
+			<span><a href="./index.html">TGP首页</a></span>
 			<span><a href="./userCenter.html">个人中心</a></span>
 			<span><a href="./resetLoginPsw.html">客服中心</a></span>
 		</div>
