--- a/src/accountAppeal.html
+++ b/src/accountAppeal.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/accountAppeal.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -39,8 +39,8 @@
 						</select>
 					</div>
 					<div class="item">
-						<label for="account">永高账号:</label>
-						<input id="account" type="text" placeholder="请输入永高账号">
+						<label for="account">TGP账号:</label>
+						<input id="account" type="text" placeholder="请输入TGP账号">
 					</div>
 					<div class="item">
 						<label for="tel">联系电话:</label>
