--- a/src/appDown.html
+++ b/src/appDown.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/appDown.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 <body>
 	<header>
 		<nav class="main center-block">
-			<div class="brand"><img src="img/downAPP/logo.png" alt="永高娱乐"></div>
+			<div class="brand"><img src="img/downAPP/logo.png" alt="TGP娱乐"></div>
 			<ul class="nav-list">
 				<li><a href="index.html">回到首页</a></li>
 				<li><a href="#">用户协议</a></li>
@@ -32,7 +32,7 @@
 	</header>
 
 	<div class="container center-block appdown">
-		<h1 class="title">来永高，寻找世上唯一契合的灵魂</h1>
+		<h1 class="title">来TGP，寻找世上唯一契合的灵魂</h1>
 		<div class="down-area">
 			<div class="ios-down">
 				<span class="btn"></span>
