--- a/src/helpRecharge.html
+++ b/src/helpRecharge.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/helpRecharge.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -29,14 +29,14 @@
 		<div class="content">
 			<div class="title"><span>充值帮助</span></div>
 			<div class="help-Recharge">
-				<p>您现在可以透过以下方式存款到 永高娱乐城：<br><br></p>
+				<p>您现在可以透过以下方式存款到 TGP娱乐城：<br><br></p>
 				<div class="m-title">一、 银行卡划款</div>
-				<p>我们有支持银联转帐，入款银行资讯请点击线上存款，进入公司入款页面即可查看 永高娱乐城提供的入款银行资讯。
+				<p>我们有支持银联转帐，入款银行资讯请点击线上存款，进入公司入款页面即可查看 TGP娱乐城提供的入款银行资讯。
 					目前提供中国工商银行、中国建设银行、中国农业银行三间银行可选择，同行互转存款到帐时间约为三到十分钟，跨行划款需依据银行划款
 					作业时间为基准，我们将于确认到帐后立刻为您游戏帐户充值。<br><br> </p>
 				<div class="m-title">二、 线上支付</div>
 				<p>会员登入后点选"线上存款"，进入线上支付。<br>
-					选择入款额度，并请确实填写 "联络电话" ，如有任何问题， 永高娱乐城客服第一时间与您联系。<br>
+					选择入款额度，并请确实填写 "联络电话" ，如有任何问题， TGP娱乐城客服第一时间与您联系。<br>
 					选择"支付银行"。<br><br>
 					支持借记卡：中国民生银行总行,中国工商银行,中国建设银行,兴业银行,中国光大银行,深圳发展银行,中国邮政,华夏银行,上海浦东发展银行,中
 					国银行,上海银行,交通银行,广东发展银行,北京银行,中信银行,深圳平安银行,中国农业银行,招商银行。<br><br>
@@ -49,7 +49,7 @@
 					如您在存款过程中遇到任何问题﹐请您点击"在线客服"寻求协助。
 					<br><br>
 					存款需知:<br>
-					永高娱乐城单笔最低存款为￥100人民币，单笔最高存款无上限。<br>
+					TGP娱乐城单笔最低存款为￥100人民币，单笔最高存款无上限。<br>
 					未开通网银的会员，请亲洽您的银行柜台办理。<br>
 					如有任何问题，请您联系24小时线上客服。
 				</P>
