--- a/src/helpWithdraw.html
+++ b/src/helpWithdraw.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/helpWithdraw.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -41,7 +41,7 @@
 				</p>
 				<div class="m-title">【取款注意事项】</div>
 				<p>1、最低取款为￥100人民币，取款上限为￥1000000人民币。(线上支付每日最高取款总额上限为￥100000人民币,公司入款每日最高取款总额上限为￥500000人民币) <br>
-					2、 永高娱乐保留权利审核会员账户，若自出款起，有效下注金额未达""每次存款额度""，而申请出款者，公司将收取""存款额度""50%的行政费用，以及￥50元的出款手续费。<br><br>
+					2、 TGP娱乐保留权利审核会员账户，若自出款起，有效下注金额未达""每次存款额度""，而申请出款者，公司将收取""存款额度""50%的行政费用，以及￥50元的出款手续费。<br><br>
 
 					【例1】1月1日当下存入1000元；1月2日存入3000元，则有效投注额必须为4000元以上出款，才不会被扣除当次存款的行政费用+手续费用。<br>
 					【例2】若有效投注逹3500元未达4000元，则反推；有效下注3500 –3000( 1月2月存款) =有效下注差额500；再扣除1000(1月1日存款) = 不足，则会扣除行政费用1000*50%+手续费50=须被扣除550元。 <br><br>
