--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/index.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -39,42 +39,43 @@
 
 	<div class="container center-block">
 		<section class="login-area">
-			<!-- <div class="item login">
-				<div class="title">永高用户登录</div>
-				<div>
-					<select class="input nation" id="country_area">
-						<option class="placeholder" value='' selected style='display:none;'>国家/地区</option>
-						<option value="" style="color:#666;background-color: #E7E7E7" disabled>常用</option>
-						<option value="volvo">Volvo</option>
-						<option value="saab">Saab</option>
-						<option value="opel">Opel</option>
-						<option value="audi">Audi</option>
-						<option value="" style="color:#666;background-color: #E7E7E7" disabled>其他</option>
-						<option value="opel">Opel</option>
-						<option value="audi">Audi</option>
-					</select>
+			<div class="left">
+				<div class="item login">
+					<div class="title">TGP用户登录</div>
+					<div>
+						<select class="input nation" id="country_area">
+							<option class="placeholder" value='' selected style='display:none;'>国家/地区</option>
+							<option value="" style="color:#666;background-color: #E7E7E7" disabled>常用</option>
+							<option value="volvo">Volvo</option>
+							<option value="saab">Saab</option>
+							<option value="opel">Opel</option>
+							<option value="audi">Audi</option>
+							<option value="" style="color:#666;background-color: #E7E7E7" disabled>其他</option>
+							<option value="opel">Opel</option>
+							<option value="audi">Audi</option>
+						</select>
+					</div>
+					<div><input class="input zh" type="text" placeholder="账号" /></div>
+					<div><input class="input pw" type="password" placeholder="密码" /></div>
+					<button class="primary btn">马上登陆</button>
+					<div class="btn-group">
+						<label class="remb" for="remb">
+							<input type="checkbox" id="remb" value="记住密码" />记住密码
+						</label>
+						<a href="#">忘记密码</a>
+					</div>
+					<!-- <div class="login-method-wrap">
+						<ul class="group">
+							<li class="qq"><span>QQ</span></li>
+							<li class="wx"><span>微信</span></li>
+							<li class="wb"><span>微博</span></li>
+						</ul>
+						<a class="regist" href="#">免费注册</a>
+					</div> -->
 				</div>
-				<div><input class="input zh" type="text" placeholder="账号" /></div>
-				<div><input class="input pw" type="password" placeholder="密码" /></div>
-				<button class="primary btn">马上登陆</button>
-				<div class="btn-group">
-					<label class="remb" for="remb">
-						<input type="checkbox" id="remb" value="记住密码" />记住密码
-					</label>
-					<a href="#">忘记密码</a>
-				</div> -->
-			<!-- <div class="login-method-wrap">
-					<ul class="group">
-						<li class="qq"><span>QQ</span></li>
-						<li class="wx"><span>微信</span></li>
-						<li class="wb"><span>微博</span></li>
-					</ul>
-					<a class="regist" href="#">免费注册</a>
-				</div> -->
-			<!-- </div> -->
 
-			<!-- 登录后 -->
-			<div class="item login-after">
+				<!-- 登录后 -->
+				<!-- <div class="item login-after">
 				<div class="led-user-wrap">
 					<img class="led-avater" src="img/userCenter/default.png" alt="">
 					<div class="info">
@@ -105,84 +106,97 @@
 						<a class="go" href="">进入游戏</a>
 					</div>
 				</div>
+			</div> -->
+				<!-- 登陆后 END -->
 			</div>
-			<!-- 登陆后 END -->
 
-			<div id="swiper3" class="swiper-container platform-wrap">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide item">
-						<a href="gamePlatform.html">
-							<div class="pic-wrap">
-								<img src="img/index/lixin.png" width="284" height="174" />
-								<div class="mask">
-									<button class="primary">进入平台</button>
-								</div>
+
+
+			<div class="platform-wrap">
+				<div class="item">
+					<a href="gamePlatform.html">
+						<div class="pic-wrap">
+							<img src="img/index/lixin.png" width="284" height="174" />
+							<div class="mask">
+								<button class="primary">进入平台</button>
 							</div>
-							<div class="item-bottom">
-								<div class="pt-title">立鑫平台</div>
-								<div class="sub-title">最专业平台：百家乐 拥挤</div>
-							</div>
-						</a>
-					</div>
-					<div class=" swiper-slide item">
-						<a href="gamePlatform.html">
-							<div class="pic-wrap">
-								<img src="img/index/oubo.png" width="284" height="174" />
-								<div class="mask">
-									<button class="primary">进入平台</button>
-								</div>
-							</div>
-							<div class="item-bottom">
-								<div class="pt-title">欧博平台</div>
-								<div class="sub-title">最专业平台：龙虎门 拥挤</div>
-							</div>
-						</a>
-					</div>
-					<div class="swiper-slide item">
-						<a href="gamePlatform.html">
-							<div class="pic-wrap">
-								<img src="img/index/AG.png" width="284" height="174" />
-								<div class="mask">
-									<button class="primary">进入平台</button>
-								</div>
-							</div>
-							<div class="item-bottom">
-								<div class="pt-title">AG平台</div>
-								<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
-							</div>
-						</a>
-					</div>
-					<div class="swiper-slide item">
-						<a href="gamePlatform.html">
-							<div class="pic-wrap">
-								<img src="img/index/AG.png" width="284" height="174" />
-								<div class="mask">
-									<button class="primary">进入平台</button>
-								</div>
-							</div>
-							<div class="item-bottom">
-								<div class="pt-title">AG平台</div>
-								<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
-							</div>
-						</a>
-					</div>
-					<div class=" swiper-slide item">
-						<a href="gamePlatform.html">
-							<div class="pic-wrap">
-								<img src="img/index/oubo.png" width="284" height="174" />
-								<div class="mask">
-									<button class="primary">进入平台</button>
-								</div>
-							</div>
-							<div class="item-bottom">
-								<div class="pt-title">欧博平台</div>
-								<div class="sub-title">最专业平台：龙虎门 拥挤</div>
-							</div>
-						</a>
-					</div>
+						</div>
+						<div class="item-bottom">
+							<div class="pt-title">立鑫平台</div>
+							<div class="sub-title">最专业平台：百家乐 拥挤</div>
+						</div>
+					</a>
 				</div>
-				<div id="s3Prev" class="swiper-button-prev"></div>
-				<div id="s3Next" class="swiper-button-next"></div>
+				<div class="item">
+					<a href="gamePlatform.html">
+						<div class="pic-wrap">
+							<img src="img/index/oubo.png" width="284" height="174" />
+							<div class="mask">
+								<button class="primary">进入平台</button>
+							</div>
+						</div>
+						<div class="item-bottom">
+							<div class="pt-title">欧博平台</div>
+							<div class="sub-title">最专业平台：龙虎门 拥挤</div>
+						</div>
+					</a>
+				</div>
+				<div class="item">
+					<a href="gamePlatform.html">
+						<div class="pic-wrap">
+							<img src="img/index/AG.png" width="284" height="174" />
+							<div class="mask">
+								<button class="primary">进入平台</button>
+							</div>
+						</div>
+						<div class="item-bottom">
+							<div class="pt-title">AG平台</div>
+							<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+						</div>
+					</a>
+				</div>
+				<div class="item">
+					<a href="gamePlatform.html">
+						<div class="pic-wrap">
+							<img src="img/index/AG.png" width="284" height="174" />
+							<div class="mask">
+								<button class="primary">进入平台</button>
+							</div>
+						</div>
+						<div class="item-bottom">
+							<div class="pt-title">AG平台</div>
+							<div class="sub-title">最专业平台：真人娱乐 拥挤</div>
+						</div>
+					</a>
+				</div>
+				<div class="item">
+					<a href="gamePlatform.html">
+						<div class="pic-wrap">
+							<img src="img/index/oubo.png" width="284" height="174" />
+							<div class="mask">
+								<button class="primary">进入平台</button>
+							</div>
+						</div>
+						<div class="item-bottom">
+							<div class="pt-title">欧博平台</div>
+							<div class="sub-title">最专业平台：龙虎门 拥挤</div>
+						</div>
+					</a>
+				</div>
+				<div class="item">
+					<a href="gamePlatform.html">
+						<div class="pic-wrap">
+							<img src="img/index/oubo.png" width="284" height="174" />
+							<div class="mask">
+								<button class="primary">进入平台</button>
+							</div>
+						</div>
+						<div class="item-bottom">
+							<div class="pt-title">欧博平台</div>
+							<div class="sub-title">最专业平台：龙虎门 拥挤</div>
+						</div>
+					</a>
+				</div>
 			</div>
 		</section>
 
@@ -312,7 +326,7 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<div class="modal-title">永高用户登录</div>
+					<div class="modal-title">TGP用户登录</div>
 					<button class="close"></button>
 				</div>
 				<div class="modal-body">
@@ -356,7 +370,7 @@
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
-					<div class="modal-title">注册永高账号</div>
+					<div class="modal-title">注册TGP账号</div>
 					<button class="close"></button>
 				</div>
 				<div class="modal-body">
@@ -481,11 +495,11 @@
 				trigger: "click"
 			});
 
-			
-			$("#s3Prev").click(function() {
+
+			$("#s3Prev").click(function () {
 				swiper3.slidePrev(300);
 			})
-			$("#s3Next").click(function() {
+			$("#s3Next").click(function () {
 				swiper3.slideNext(300);
 			})
 
