--- a/src/msgDetail.html
+++ b/src/msgDetail.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/msgDetail.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 	<div class="container center-block msg-detail">
 		<img class="pic" src="./img/xiaogao.png" alt="">
 		<p class="text">
-			欢迎来到永高娱乐城，我们将在这里一直陪伴着你<br>
+			欢迎来到TGP娱乐城，我们将在这里一直陪伴着你<br>
 			为了感谢您的支持，新用户首充即可送<span class="wr">28元</span>现金红包<br>
 			赶紧行动吧
 		</p>
