--- a/src/recharge.html
+++ b/src/recharge.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/recharge.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -132,7 +132,7 @@
 						<div class="item"><span class="label">转账金额</span><span class="val warning">￥100</span></div>
 						<div class="tip-info">
 							<div class="row">
-								<span>转账留言:永高</span>
+								<span>转账留言:TGP</span>
 								<span>有助于快速审核</span>
 							</div>
 							<div class="row">
