--- a/src/modifyPayPsw.html
+++ b/src/modifyPayPsw.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/modifyPayPsw.css -->
 	<link href="css/normalize.css" rel="stylesheet">
