--- a/src/passwordAppeal.html
+++ b/src/passwordAppeal.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<!-- build:css css/passwordAppeal.css -->
 	<link href="css/normalize.css" rel="stylesheet">
@@ -41,8 +41,8 @@
 					</select>
 				</div>
 				<div class="item">
-					<label for="acc">永高账号:</label>
-					<input id="acc" type="text" placeholder="请输入永高账号">
+					<label for="acc">TGP账号:</label>
+					<input id="acc" type="text" placeholder="请输入TGP账号">
 				</div>
 
 				<!-- <div class="item" style="display:none;">
