--- a/src/userBill.html
+++ b/src/userBill.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="">
-	<title>永高娱乐</title>
+	<title>TGP娱乐</title>
 	<meta name="viewport" content="width=1366, initial-scale=1">
 	<link href="lib/Datepicker/css/date-font.css" rel="stylesheet">
 	<link href="lib/Datepicker/css/foundation-datepicker.min.css" rel="stylesheet">
